--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -3,4 +3,5 @@ header {
     height: 70px;
     width: 100%;
     border-bottom: 1px #CCCCCC;
+    background-image: url('../images/logo.png') 20px left center no-repeat;
 }
