--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -2,7 +2,7 @@ footer {
         background: white;
         height: 60px;
         width: 100%;
-	border-top
+	border-top: 1px #CCCCCC;
         position: absolute;
         bottom: 0;
         line-height: 60px;
