--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -2,7 +2,7 @@ header {
     background: white;
     height: 70px;
     width: 100%;
-    border-bottom: 1px #CCCCCC;
+    border-bottom: 1px solid #CCCCCC;
     background: url('../images/logo.png')left center no-repeat;
-    background-size: 20px;
+    background-position: 20px;
 }
