--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,12 +1,12 @@
 .filters {
     background: white;
-    height: 10px;
+    height: 70px;
     width: 100%;
     border: 1px #DDDDDD solid;
     border-radius: 4px;
 }
 
-button {
+.filters button {
     font-size: 18px;
     color: #FFFFFF;
     background: #FF5A5F;
@@ -18,5 +18,5 @@ button {
 }
 
 button:hover {
-    opacity: 0.1;
+    opacity: 0.9;
 }
