--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -12,8 +12,9 @@
     background: #FF5A5F;
     height: 48px;
     width: 20%;
+    border: none;
     border-radius: 4px;
-    margin: 0px 30px;
+    margin-right: 30px;
     position: absolute;
 }
 
