--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -36,13 +36,13 @@ button:hover {
 .filters h3 {
     margin: 0;
     margin-top: 10px;
-    margin-left: 30px;
+    margin-left: 50px;
     font-weight: 600;
 }
 
 .filters h4 {
     font-weight: 400;
     font-size: 14px
-    margin-top: 10;
-    margin-left: 30px;
+    margin-top: 10px;
+    margin-left: 50px;
 }
