--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -44,6 +44,7 @@ button:hover {
 .filters h4 {
     font-weight: 400;
     font-size: 14px
-    margin-top: 0px;
+    margin-top: 0px !important;
     margin-left: 50px;
+    padding: 0 !important;
 }
